# lab23

./: .gitignore  CMakeLists.txt  README.md
include/: cli.h  commands.h  gtree.h  parse.h  stack.h  vector.h
src/: cli.c  commands.c  gtree.c  main.c  parse.c  stack.c
